# advent_of_code

./: .gitignore  pyproject.toml
advent_of_code/: template.py  test_template.py
advent_of_code/2015/day01/: day01.py
advent_of_code/2015/day02/: day02.py
advent_of_code/2015/day03/: day03.py
advent_of_code/2022/day01/: day01.py
advent_of_code/2022/day02/: day02.py  test_day02.py
advent_of_code/2022/day03/: day03.py  test_day03.py
advent_of_code/2022/day04/: day04.py  test_day04.py
advent_of_code/2023/day01/: day01.py  test_day01.py
advent_of_code/2023/day02/: day01.py  test_day01.py  test_day02.py
advent_of_code/2023/day04/: day04.py  test_day04.py
advent_of_code/2023/day08/: day08.py  test_day08.py
advent_of_code/2023/day11/: day11.py
advent_of_code/2023/day13/: day13.py  test_day13.py
advent_of_code/2023/day14/: day14.py  test_day14.py
advent_of_code/2023/day15/: day15.py
advent_of_code/2023/day18/: day18.py
advent_of_code/2024/day01/: day01.ipynb
advent_of_code/2024/day02/: day02.ipynb
advent_of_code/2024/day03/: day03.ipynb
advent_of_code/2024/day04/: day04.ipynb
