[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["eruditorium <y.t@gmx.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
